// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Run config pkg-scope > cjs structure 1`] = `null`;

exports[`Run config pkg-scope > dist structure 1`] = `null`;

exports[`Run config pkg-scope > es2017 structure 1`] = `
[
  "es2017/",
  "├── index.d.ts",
  "└── index.js",
]
`;

exports[`Run config pkg-scope > esm structure 1`] = `
[
  "esm/",
  "├── index.d.ts",
  "└── index.js",
]
`;

exports[`Run config pkg-scope > file content es2017/index.d.ts 1`] = `
"declare global {
    const __PLUGIN_INFO__: any;
}
export declare const foo = 1;
export declare const info: any;
"
`;

exports[`Run config pkg-scope > file content es2017/index.js 1`] = `
"const foo = 1;
const info = {
    "name": "global"
};

export { foo, info };
"
`;

exports[`Run config pkg-scope > file content esm/index.d.ts 1`] = `
"declare global {
    const __PLUGIN_INFO__: any;
}
export declare const foo = 1;
export declare const info: any;
"
`;

exports[`Run config pkg-scope > file content esm/index.js 1`] = `
"var foo = 1;
var info = {
    "name": "pkg-config"
};

export { foo, info };
"
`;

exports[`Run config plugin-scope > es2017 structure 1`] = `
[
  "es2017/",
  "├── index.d.ts",
  "└── index.js",
]
`;

exports[`Run config plugin-scope > esm structure 1`] = `
[
  "esm/",
  "├── index.d.ts",
  "└── index.js",
]
`;

exports[`Run config plugin-scope > file content es2017/index.d.ts 1`] = `
"declare global {
    const __PLUGIN_INFO__: any;
}
export declare const foo = 1;
export declare const info: any;
"
`;

exports[`Run config plugin-scope > file content es2017/index.js 1`] = `
"const foo = 1;
const info = {
    "pluginScope": "global"
};

export { foo, info };
"
`;

exports[`Run config plugin-scope > file content esm/index.d.ts 1`] = `
"declare global {
    const __PLUGIN_INFO__: any;
}
export declare const foo = 1;
export declare const info: any;
"
`;

exports[`Run config plugin-scope > file content esm/index.js 1`] = `
"var foo = 1;
var info = {
    "pluginScope": "pkg"
};

export { foo, info };
"
`;
